feat: remove unnecessary props

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -11,8 +11,8 @@
 
 :root {
   font-size: 62.5%;
-  --dark-background: #121518;
-  --medium-background: #1c1f22;
+  --dark-background: #121416;
+  --medium-background: #171a1d;
   --light-background: #1c1f22f5;
   --light-color: #cecece;
 }
