--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -20,8 +20,8 @@
 :root {
 	font-size: 62.5%;
 	--dark-background: #121416;
-	--medium-background: #171a1d;
-	--light-background: #1c1f22f5;
+	--medium-background: #121416;
+	--light-background: #121416;
 	--light-color: #cecece;
 }
 
@@ -44,9 +44,11 @@ body {
 	height: fit-content;
 	background: var(--medium-background);
 	padding: 3rem;
+	margin-top: 1rem;
 	border-radius: 1.2rem;
 	display: flex;
 	flex-direction: column;
+	box-shadow: inset 0 0 0.2rem white;
 	gap: 1.2rem;
 }
 
